--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>teamform</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css" integrity="sha256-BQwSEeLxuDggfePeFdo3V906rcvcJpkSAYr/Lqc2oSo=" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/sweetalert2/5.2.0/sweetalert2.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/sweetalert2/5.2.0/sweetalert2.min.css">-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   </head>
   <body>
@@ -15,6 +15,7 @@
     <!-- built files will be auto injected -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js" integrity="sha256-BlYXc67JeIFZfxjseL6XCBWFi7MwxKoUEF6rPIzHmBM=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/sweetalert2/5.2.0/sweetalert2.min.js"></script>
+    <!--<script type="text/javascript" src="https://cdn.jsdelivr.net/sweetalert2/5.2.0/sweetalert2.min.js"></script>-->
+    
   </body>
 </html>
